[gd_scene load_steps=3 format=3 uid="uid://b4cgmatdls027"]

[ext_resource type="Script" path="res://scenes/screens/game_over_screen.gd" id="1_x11hr"]
[ext_resource type="Theme" uid="uid://dti72e04ltog4" path="res://game.theme" id="2_hwt1f"]

[node name="GameOverScreen" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.499, 0.095, 0.145, 0.13)

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 471.0
offset_top = 88.0
offset_right = 682.0
offset_bottom = 153.0
theme = ExtResource("2_hwt1f")
theme_override_font_sizes/font_size = 50
text = "Game Over"
horizontal_alignment = 1

[node name="Cause" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.5
offset_top = -267.0
offset_right = 238.5
offset_bottom = -202.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_hwt1f")
theme_override_font_sizes/font_size = 36
text = "You woke the human up!"
horizontal_alignment = 1

[node name="GameOverScreen" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 7.0
offset_right = 129.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x11hr")

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverScreen"]
layout_mode = 2

[node name="TryAgain" type="Button" parent="GameOverScreen/VBoxContainer"]
custom_minimum_size = Vector2(220, 90)
layout_mode = 2
theme = ExtResource("2_hwt1f")
theme_override_font_sizes/font_size = 41
text = "Try Again"
icon_alignment = 1

[node name="MainMenuButton" type="Button" parent="GameOverScreen/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
theme = ExtResource("2_hwt1f")
theme_override_font_sizes/font_size = 41
text = "Main Menu"
icon_alignment = 1

[connection signal="mouse_entered" from="GameOverScreen/VBoxContainer/TryAgain" to="GameOverScreen" method="_on_try_again_mouse_entered"]
[connection signal="pressed" from="GameOverScreen/VBoxContainer/TryAgain" to="GameOverScreen" method="_on_try_again_pressed"]
[connection signal="mouse_entered" from="GameOverScreen/VBoxContainer/MainMenuButton" to="GameOverScreen" method="_on_main_menu_button_mouse_entered"]
[connection signal="pressed" from="GameOverScreen/VBoxContainer/MainMenuButton" to="GameOverScreen" method="_on_main_menu_button_pressed"]
